--- a/public/less/style.less
+++ b/public/less/style.less
@@ -30,11 +30,16 @@
 
 /* Styles */
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  /*background-color: @bg;*/
+  //background-color: @bg;
   .gradient(@bg, @bg2);
+  height: 100%;
 }
 
 .container {
