--- a/public/less/style.less
+++ b/public/less/style.less
@@ -187,10 +187,12 @@ a {
 
 ::selection {
   background-color: black;
-  color: white;
+  background-color: rgba(0,0,0,0);
+  //color: white;
 }
 
 ::-moz-selection {
   background-color: black;
-  color: white;
+  background-color: rgba(0,0,0,0);
+  //color: white;
 }
