--- a/public/less/style.less
+++ b/public/less/style.less
@@ -109,6 +109,10 @@ body {
   margin-bottom: 50px;
 }
 
+.date {
+  font-size: 9pt;
+}
+
 #about {
   position: fixed;
   margin: 50px;
@@ -196,3 +200,4 @@ a {
   background-color: rgba(0,0,0,0);
   //color: white;
 }
+
