about me commit

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -93,6 +93,7 @@ body {
 .content {
   position: relative;
   margin-left: @radius / 2;
+  margin-right: 50px;
   right: 0;
   padding: 30px;
   padding-top: 50px;
