--- a/public/less/style.less
+++ b/public/less/style.less
@@ -3,8 +3,10 @@
 @innercircleradius: 300px;
 @aboutradius: 220px;
 @imgradius: 100px;
+@blogradius: 150px;
 
 @bg: rgb(228,216,200);  //rgb(241,240,248);
+@mainbg: rgb(178,29,58);
 @bg2: rgb(200,184,158);
 @aboutbg: black;
 @aboutbghover: rgb(22,22,22);
@@ -25,6 +27,8 @@
   -webkit-transform: rotate(@angle);
   transform: rotate(@angle);
   -moz-transform: rotate(@angle);
+  -ms-transform: rotate(@angle);
+  -o-transform: rotate(@angle);
 }
 
 
@@ -38,8 +42,10 @@ body {
   margin: 0;
   padding: 0;
   background-color: @bg;
-  //.gradient(@bg, @bg2);
+  .gradient(@bg, @bg2);
   height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
@@ -52,7 +58,7 @@ body {
   width: @radius;
   left: -@radius / 2;
   border-radius: 50%;
-  background-color: rgb(178,29,58); //rgb(13,125,189);
+  background-color: @mainbg; //rgb(13,125,189);
   margin: auto;
   top: 0;
   bottom: 0;
@@ -94,6 +100,7 @@ body {
   position: relative;
   margin-left: @radius / 2;
   margin-right: 50px;
+  margin-top: 30px;
   right: 0;
   padding: 30px;
   padding-top: 50px;
@@ -215,4 +222,31 @@ a {
   font-family: 'Open Sans', 'Arial';
   font-size: 10pt;
   z-index: 1999;
+}
+
+.blogs {
+  list-style-type: none;
+}
+
+.blogs li {
+  float: left;
+  background-color: rgb(182,74,38);
+  width: @blogradius;
+  height: @blogradius;
+  max-width: @blogradius;
+  max-height: @blogradius;
+//  line-height: 100px;
+  border-radius: 50%;
+  padding: 50px;
+  margin: 20px;
+  color: white;
+  overflow: hidden;
+  text-align: center;
+  font-family: 'Slackey';
+  .rotate(-20deg);
+}
+
+.blogs li:hover {
+  background-color: rgb(255,240,165);
+  color: black;
 }
