--- a/public/less/style.less
+++ b/public/less/style.less
@@ -20,7 +20,7 @@
   background: -o-linear-gradient(top, @colorone 0%,@colortwo 100%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top, @colorone 0%,@colortwo 100%); /* IE10+ */
   background: linear-gradient(to bottom, @colorone 0%,@colortwo 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@colorone', endColorstr='@colortwo',GradientType=0 ); /* IE6-9 */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@colorone', endColorstr='@colortwo',GradientType=0 ); /* IE6-9 */
 }
 
 .rotate(@angle) {
