--- a/public/less/style.less
+++ b/public/less/style.less
@@ -4,6 +4,7 @@
 @aboutradius: 220px;
 @imgradius: 100px;
 @blogradius: 150px;
+@projradius: 80px;
 
 @bg: rgb(228,216,200);  //rgb(241,240,248);
 @mainbg: rgb(178,29,58);
@@ -247,6 +248,33 @@ a {
 }
 
 .blogs li:hover {
+  background-color: rgb(255,240,165);
+  color: black;
+}
+
+.projects {
+  list-style-type: none;
+}
+
+.projects li {
+  float: left;
+  background-color: rgb(182,74,38);
+  width: @projradius;
+  height: @projradius;
+  max-width: @projradius;
+  max-height: @projradius;
+//  line-height: 100px;
+  border-radius: 50%;
+  padding: 50px;
+  margin: 20px;
+  color: white;
+  overflow: hidden;
+  text-align: center;
+  font-family: 'Slackey';
+  .rotate(-20deg);
+}
+
+.projects li:hover {
   background-color: rgb(255,240,165);
   color: black;
 }
